fixed photo spacing

--- a/styles.css
+++ b/styles.css
@@ -772,7 +772,7 @@
 
   .about__content p {
     margin-top: 1rem;
-    font-size: 1.5rem;
+    font-size: 1rem;
   }
 }
 
